Implmenting show account invoices in billing transaction
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40865

--- a/Vanrise/Code/Vanrise.InvToAccBalanceRelation.Business/Vanrise.InvToAccBalanceRelation.Business.csproj
+++ b/Vanrise/Code/Vanrise.InvToAccBalanceRelation.Business/Vanrise.InvToAccBalanceRelation.Business.csproj
@@ -43,8 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountBalanceInvoicesManager.cs" />
     <Compile Include="InvoiceSummaryFieldSourceSetting.cs" />
     <Compile Include="InvToAccBalanceRelationDefinitionManager.cs" />
+    <Compile Include="InvToAccBalanceRelGetBalanceInvoiceAccountsContext.cs" />
+    <Compile Include="InvToAccBalanceRelGetInvoiceBalanceAccountsContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
