Update Mediation Process, Add Multi Leg Processing
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40866

--- a/Mediation/Code/Mediation.Runtime/App.config
+++ b/Mediation/Code/Mediation.Runtime/App.config
@@ -99,7 +99,7 @@
     <add key="BusinessProcess_ActivityEventsTracking" value="false"/>
     <add key="IsRuntimeService" value="false"/>
     <add key="ExposedConnectionStringNames" value="Mediation_GenericRecord_DBConnString"/>
-
+    <add key="SecurityDBConnStringKey" value="ConfigurationDBConnString"/>
     <add key="IntegrationConfigDBConnStringKey" value="ConfigurationDBConnString"/>
     <add key="RuntimeConfigDBConnStringKey" value="ConfigurationDBConnString"/>
     <add key="QueueingConfigDBConnStringKey" value="ConfigurationDBConnString"/>
