Adding InitializeStage class
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40875

--- a/BusinessProcess/Code/Vanrise.Reprocess.BP.Activities/Vanrise.Reprocess.BP.Activities.csproj
+++ b/BusinessProcess/Code/Vanrise.Reprocess.BP.Activities/Vanrise.Reprocess.BP.Activities.csproj
@@ -82,6 +82,7 @@
     <Compile Include="FinalizeStage.cs" />
     <Compile Include="ExecuteStage.cs" />
     <Compile Include="GetReprocessDefinition.cs" />
+    <Compile Include="InitializeStage.cs" />
     <Compile Include="LoadDataToReprocess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StageManager.cs" />
