--- a/Vanrise/Code/Vanrise.GenericData.QueueActivators/Vanrise.GenericData.QueueActivators.csproj
+++ b/Vanrise/Code/Vanrise.GenericData.QueueActivators/Vanrise.GenericData.QueueActivators.csproj
@@ -64,6 +64,7 @@
     <Compile Include="GenericSummaryTransformationManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecordTypeStageFilter.cs" />
+    <Compile Include="DistributeBatchQueueActivator.cs" />
     <Compile Include="StoreBatchQueueActivator.cs" />
     <Compile Include="TransformBatchQueueActivator.cs" />
     <Compile Include="UpdateSummaryQueueActivator.cs" />
