--- a/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
+++ b/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
@@ -69,6 +69,7 @@
     <Compile Include="ComponentType\VRComponentTypeManager.cs" />
     <Compile Include="ConfigManager.cs" />
     <Compile Include="GenericLKUP\GenericLKUPBEDefinitionSettings.cs" />
+    <Compile Include="GenericLKUP\GenericLKUPDefinitionManager.cs" />
     <Compile Include="GenericLKUP\GenericLKUPManager.cs" />
     <Compile Include="StatusDefinitionFilterContext.cs" />
     <Compile Include="VRActionAudit\VRActionAuditLKUPManager.cs" />
