Change Mediation Definition Id to GUID, Add Call type, Update Leg Processing, Update DB Structure
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40899

--- a/Mediation/Code/Mediation.Generic.Entities/Mediation.Generic.Entities.csproj
+++ b/Mediation/Code/Mediation.Generic.Entities/Mediation.Generic.Entities.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enumerations.cs" />
     <Compile Include="IMediationProcessContext.cs" />
     <Compile Include="MediationDefinition\MediationDefinition.cs" />
     <Compile Include="MediationDefinition\MediationDefinitionDetail.cs" />
