Added an method overload of IsEffective that takes an EntityFilterEffectiveMode
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40901

--- a/Vanrise/Code/Vanrise.Common.Web/Vanrise.Common.Web.csproj
+++ b/Vanrise/Code/Vanrise.Common.Web/Vanrise.Common.Web.csproj
@@ -187,6 +187,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Common\Constant\ActionAuditLKUPEnum.js" />
+    <Content Include="Common\Constant\EntityFilterEffectiveModeEnum.js" />
     <Content Include="Common\Constant\GridWidthFactorEnum.js" />
     <Content Include="Common\Constant\LogEntryTypeEnum.js" />
     <Content Include="Common\Constant\LogAttributeEnum.js" />
