--- a/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
@@ -65,6 +65,7 @@
     <Compile Include="ComponentType\VRComponentTypeSettings.cs" />
     <Compile Include="Country\CountryFilter.cs" />
     <Compile Include="DataRetrieval\RemoteExcelResult.cs" />
+    <Compile Include="EntityFilterEffectiveMode.cs" />
     <Compile Include="GenericLKUP\GenericLKUPDefinitionConfig.cs" />
     <Compile Include="GenericLKUP\GenericLKUPDefinitionExtendedSettings.cs" />
     <Compile Include="GenericLKUP\GenericLKUPItem.cs" />
