added AnalyticMeasureExternalSource to Analytics
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40923

--- a/Vanrise/Code/Vanrise.Analytic.Entities/Vanrise.Analytic.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Analytic.Entities/Vanrise.Analytic.Entities.csproj
@@ -88,6 +88,8 @@
     <Compile Include="Config\Dimension\AnalyticDimensionEditorInput.cs" />
     <Compile Include="Config\Dimension\AnalyticDimensionEditorRuntime.cs" />
     <Compile Include="Config\Dimension\IDimensionEvaluator.cs" />
+    <Compile Include="Config\ExternalSource\AnalyticMeasureExternalSourceConfig.cs" />
+    <Compile Include="Config\ExternalSource\AnalyticMeasureExternalSource.cs" />
     <Compile Include="Config\Join\AnalyticJoin.cs" />
     <Compile Include="Config\Join\AnalyticJoinConfigInfo.cs" />
     <Compile Include="Config\Join\AnalyticJoinConfigInfoFilter.cs" />
