--- a/TOneV2/Code/TOneV2/TOne.WhS.DBSync.App/App.config
+++ b/TOneV2/Code/TOneV2/TOne.WhS.DBSync.App/App.config
@@ -4,14 +4,17 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <appSettings>
-    <add key="ConnectionString" value="Server=192.168.110.185;Database=nettalkfordev02;User ID=development;Password=dev!123"/>
+    <add key="ConnectionString" value="Server=192.168.110.195;Database=MVTSProDemo;User ID=sa;Password=no@cce$$dev"/>
     <add key="ConfigurationDBConnStringKey" value="ConfigurationDBConnString"/>
     <add key="TOneWhS_BE_DBConnStringKey" value="TOneV2DBConnString"/>
     <add key="RulesDBConnStringKey" value="ConfigurationDBConnString"/>
+    <add key="LogDBConnString" value="LogDBConnString"/>
   </appSettings>
   <connectionStrings>
-    <add name="TOneV2DBConnString" connectionString="Server=192.168.110.185\MSSQL2014;Database=TOneV2_Online;User ID=Application_Online_User;Password=Application_Online_User"/>
-    <add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185\MSSQL2014;Database=TOneV2_Online;User ID=Application_Online_User;Password=Application_Online_User"/>
+    <add name="TOneV2DBConnString" connectionString="Server=192.168.110.185;Database=TOneV2_dev;User ID=development;Password=dev!123"/>
+    <add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=TOneConfiguration;User ID=development;Password=dev!123"/>
+    <add name="LogDBConnString" connectionString="Data Source=localhost;Initial Catalog=TOneWFTracking;User ID=sa;Password=p@ssw0rd " />
+    <add name="LoggingConfigDBConnString" connectionString="Server=192.168.110.185;Database=TOneConfiguration;User ID=development;Password=dev!123" />
     <add name="MainDBConnString" connectionString=""/>
   </connectionStrings>
 </configuration>
