Adding Block and unblock to IVSwitch(manual and built in )  + fixing some bugs on blocking and ubnlocking customers
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40930

--- a/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.IVSwitch/TOne.WhS.RouteSync.IVSwitch.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.IVSwitch/TOne.WhS.RouteSync.IVSwitch.csproj
@@ -72,6 +72,7 @@
     <Compile Include="BuiltInIVSwitchSWSync.cs" />
     <Compile Include="ConfigBuilder.cs" />
     <Compile Include="ConfigurationCacheManager.cs" />
+    <Compile Include="EndPointStatus.cs" />
     <Compile Include="IVSwitchConvertedRoute.cs" />
     <Compile Include="IVSwitchMasterDataManager.cs" />
     <Compile Include="IVSwitchOption.cs" />
