--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Business/TOne.WhS.SupplierPriceList.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Business/TOne.WhS.SupplierPriceList.Business.csproj
@@ -82,6 +82,7 @@
     <Compile Include="BusinessRules\Conditions\ValidateAfterProcessing\ZoneBEDGreaterThanSystemPeriodCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateCodesRates\MissingZonesCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateZones\BEDBeforeRetroActiveMinDateCondition.cs" />
+    <Compile Include="BusinessRules\Conditions\ValidateZones\RateGreaterThanZero.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateZones\ZoneServicesWithDifferentBEDCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateZones\ZoneHasNoCodesCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateZones\NumericCodeCondition.cs" />
