--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.BP.Activities/TOne.WhS.Sales.BP.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.BP.Activities/TOne.WhS.Sales.BP.Activities.csproj
@@ -97,6 +97,7 @@
     <Compile Include="GetExistingSaleEntityZoneServices.cs" />
     <Compile Include="NotifyCustomers.cs" />
     <Compile Include="ProcessCustomerCountries.cs" />
+    <Compile Include="ReadRatePlanContext.cs" />
     <Compile Include="SavePricelistFiles.cs" />
     <Compile Include="SetContextEffectiveAfterCustomerZoneRatesByZone.cs" />
     <Compile Include="SetContextExistingZonesByCountry.cs" />
