--- a/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
@@ -101,6 +101,11 @@
     <Compile Include="DID\DIDSettings.cs" />
     <Compile Include="DID\IDIDFilter.cs" />
     <Compile Include="DID\SourceDIDData.cs" />
+    <Compile Include="FinancialAccount\AccountBEFinancialAccountsSettings.cs" />
+    <Compile Include="FinancialAccount\FinancialAccount.cs" />
+    <Compile Include="FinancialAccount\FinancialAccountData.cs" />
+    <Compile Include="FinancialAccount\FinancialAccountDefinitionSettings.cs" />
+    <Compile Include="FinancialAccount\FinancialAccountSettings.cs" />
     <Compile Include="Package\Definition\PackageDefinitionFilter.cs" />
     <Compile Include="Package\IPackageFilter.cs" />
     <Compile Include="ProductFamily\ProductFamily.cs" />
